httpbin/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin
  http:
  - match:
    - headers:
        End-User:
          exact: murat
    fault:
      abort:
        httpStatus: 500
        percent: 100
    route:
    - destination:
        host: httpbin
        subset: v1
  - route:
    - destination:
        host: httpbin
        subset: v1
---
